--- a/app/src/main/res/layout/content_song_header.xml
+++ b/app/src/main/res/layout/content_song_header.xml
@@ -8,8 +8,6 @@
     <TextView
         android:id="@+id/tv_song_count_mode"
         style="@style/StyleTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="@string/undefined"
         android:textSize="@dimen/sp_14"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -18,9 +16,7 @@
 
     <ImageView
         android:id="@+id/iv_header_search"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        style="@style/StyleHeaderImage"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/iv_header_sort"
         app:layout_constraintTop_toTopOf="parent"
@@ -28,9 +24,7 @@
 
     <ImageView
         android:id="@+id/iv_header_sort"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        style="@style/StyleHeaderImage"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/iv_header_edit"
         app:layout_constraintTop_toTopOf="parent"
@@ -38,9 +32,7 @@
 
     <ImageView
         android:id="@+id/iv_header_edit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        style="@style/StyleHeaderImage"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
