--- a/app/src/main/res/layout/content_song_picker_header.xml
+++ b/app/src/main/res/layout/content_song_picker_header.xml
@@ -8,8 +8,6 @@
     <TextView
         android:id="@+id/tv_picker_header_count"
         style="@style/StyleTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="@string/undefined"
         android:textSize="@dimen/sp_16"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -18,9 +16,7 @@
 
     <ImageView
         android:id="@+id/iv_picker_header_sort"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        style="@style/StyleHeaderImage"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/chb_picker_select_all"
         app:layout_constraintTop_toTopOf="parent"
