--- a/app/src/main/res/layout/content_play_list_header.xml
+++ b/app/src/main/res/layout/content_play_list_header.xml
@@ -8,6 +8,8 @@
     <TextView
         android:id="@+id/tv_song_count_mode"
         style="@style/StyleTextView"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
         android:text="@string/undefined"
         android:textSize="@dimen/sp_14"
         app:layout_constraintBottom_toBottomOf="parent"
