--- a/app/src/main/res/layout/fragment_local_song.xml
+++ b/app/src/main/res/layout/fragment_local_song.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.RecentFragment">
+    tools:context=".ui.LocalSongFragment">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_recent_song"
+        android:id="@+id/rv_local_song"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
