--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -87,8 +87,8 @@
     </style>
 
     <style name="StyleHeaderImage">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">@dimen/image_size_24</item>
+        <item name="android:layout_height">@dimen/image_size_24</item>
         <item name="android:layout_marginEnd">8dp</item>
     </style>
 
