--- a/app/src/main/res/layout/content_song_list_header.xml
+++ b/app/src/main/res/layout/content_song_list_header.xml
@@ -26,6 +26,14 @@
         app:srcCompat="@drawable/play" />
 
     <ImageView
+        android:id="@+id/iv_song_header_search"
+        style="@style/StyleHeaderImage"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/iv_song_header_edit"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_search" />
+
+    <ImageView
         android:id="@+id/iv_song_header_edit"
         style="@style/StyleHeaderImage"
         app:layout_constraintBottom_toBottomOf="parent"
