--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorGreen">#21D49C</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="WhiteSmoke">#F5F5F5</color>
     <color name="colorGold">#FFD700</color>
     <color name="colorGray">#D3D3D3</color>
     <color name="colorSkyBlue">#87CEEB</color>
