--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -97,4 +97,20 @@
         <item name="android:layout_marginEnd">8dp</item>
     </style>
 
+    <style name="StyleDividerCity">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">2dp</item>
+        <item name="android:layout_marginStart">8dp</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:background">@color/WhiteSmoke</item>
+    </style>
+
+    <style name="StyleCityItem">
+        <item name="android:layout_width">65dp</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:background">@color/WhiteSmoke</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
 </resources>
