--- a/app/src/main/res/layout/item_song_info.xml
+++ b/app/src/main/res/layout/item_song_info.xml
@@ -41,7 +41,6 @@
         android:id="@+id/tv_item_song_name"
         style="@style/StyleTextView"
         android:layout_width="0dp"
-        android:layout_weight="1"
         android:text="@string/undefined"
         android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,10 +52,10 @@
         style="@style/StyleTextView"
         android:layout_width="0dp"
         android:layout_marginStart="0dp"
-        android:layout_weight="1"
         android:text="@string/undefined"
         android:textColor="@color/colorGray"
         android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/tv_item_song_name"
         app:layout_constraintTop_toBottomOf="@+id/tv_item_song_name" />
 
