--- a/app/src/main/res/layout/content_song_detail.xml
+++ b/app/src/main/res/layout/content_song_detail.xml
@@ -76,6 +76,7 @@
             android:layout_marginTop="10dp"
             android:text="@string/empty"
             android:textSize="@dimen/font_16"
+            android:textColor="@color/colorBlack"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/lb_detail_file_path" />
